--- a/_includes/calendar.html
+++ b/_includes/calendar.html
@@ -24,7 +24,7 @@
   <td><p>First Day of Classes!</p></td>
   <td></td>
   <td></td>
-  <td></td>
+  <td><p class="prel">Chapter 1 Prelecture Due</p> <p class="prel">Bonus Survey 1 Due</p</td>
 </tr>
 <tr>
   <td style="line-height:1px;margin:0;"></td>
