--- a/_includes/final-schedule.html
+++ b/_includes/final-schedule.html
@@ -7,19 +7,19 @@
     <th>Location</th>
   </tr>
   <tr>
-    <td>L1 (In Person class)</td>
-    <td>Monday, Dec 16th</td>
-    <td>1:30pm-4:30pm</td>
+    <td>L1 Kelly Findley's MWF In-Person Class</td>
+    <td>Tuesday May 12th, 2020</td>
+    <td>7-10pm</td>
     <td>Location: TBA</td>
   </tr>
   <tr>
-    <td>KF (Online class)</td>
-    <td>Date: TBA</td>
-    <td>Time: TBA</td>
+    <td>L2 Karle Flanagan's Tuesday/Thursday In-Person Class</td>
+    <td>Friday May 8th</td>
+    <td>7-10pm</td>
     <td>Location: TBA</td>
   </tr>
   <tr>
-    <td>ONL (Online class)</td>
+    <td>KF Karle Flanagan's Online class</td>
     <td>Date: TBA</td>
     <td>Time: TBA</td>
     <td>Location: TBA</td>
