fixed some calendar date errors.

--- a/_includes/calendar.html
+++ b/_includes/calendar.html
@@ -24,7 +24,7 @@
   <td><p>First Day of Classes!</p></td>
   <td></td>
   <td></td>
-  <td></td>
+  <td><p class="prel">Chapter 1 Prelecture Due</p><p class="surv">Bonus Survey 1 Due</p></td>
 </tr>
 <tr>
   <td style="line-height:1px;margin:0;"></td>
@@ -37,10 +37,10 @@
 <tr>
   <td><b>Week 2: Chapters 2-3</b>(Observational Studies)</td>
   <td></td>
-  <td></td>
-  <td><p class="hw">HW Assignment 1 Due</p><p class="prel">Chapter 2 Part 1 Prelecture Due</p></td>
-  <td></td>
-  <td><p class="hw">HW Assignment 2 Due</p><p class="prel">Chapter 2 Part 2 Prelecture Due</p></td>
+  <td><p class="hw">HW Assignment 1 Due</p></td>
+  <td><p class="prel">Chapter 2 Part 1 Prelecture Due</p></td>
+  <td><p class="hw">HW Assignment 2 Due</p></td>
+  <td><p class="prel">Chapter 2 Part 2 Prelecture Due</p></td>
 </tr>
 </table>
 
