--- a/_includes/exam_schedule.html
+++ b/_includes/exam_schedule.html
@@ -1,4 +1,4 @@
-
+TBA
  <!--
 <div class="table-responsive"> 
   <table class="table table-bordered">
@@ -40,5 +40,6 @@
       <td>2079 Natural History Building</td>
     </tr>
   </table>
--->
+
 </div>
+-->
