updated exam 3 date

--- a/_includes/calendar.html
+++ b/_includes/calendar.html
@@ -237,7 +237,7 @@
   <td><b>Week 12: Exam Week</b></td>
   <td></td>
   <td><p class="hw">HW Assignment 15 Due</p></td>
-  <td><b><p class="exam">Exam 3 at 7pm</p></b><p class="prel">Chapter 17 Prelecture Due</p></td>
+  <td><p class="prel">Chapter 17 Prelecture Due</p></td>
   <td><p class="hw">HW Assignment 16 Due</p></td>
   <td><p class="prel">Chapter 18 Prelecture Due</p></td>
 </tr>
@@ -253,7 +253,7 @@
   <td><b>Week 13: Chapters 17-19</b>(Sampling & Inference)</td>
   <td></td>
   <td><p class="hw">HW Assignment 17 Due</p></td>
-  <td></td>
+  <td><b><p class="exam">Exam 3 at 7pm</p></b></td>
   <td></td>
   <td></td>
 </tr>
