--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,9 +109,10 @@ body {
   font-weight: bold;
   text-transform: uppercase;
 }
-.announcements p {
+.announcements p, .announcements li {
   color: #13294b;
   font-size: 1.1vw;
+  text-align: left;
 }
 .announcements {
   margin: 0 auto;
