--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -482,7 +482,7 @@ hr.socket {
     font-weight: bold;
     text-transform: uppercase;
   }
-  .announcements p {
+  .announcements p, .announcements li  {
     color: #13294b;
     font-size: 15px;
     text-align: left;
