--- a/_includes/exam_schedule.html
+++ b/_includes/exam_schedule.html
@@ -1,5 +1,5 @@
-TBA
- <!--
+
+ 
 <div class="table-responsive"> 
   <table class="table table-bordered">
     <tr>
@@ -8,36 +8,32 @@ TBA
      
     </tr>
     <tr>
-      <td>Karle's Online Section (KF)<br>Last Names: A-P</td>
-      <td>Foellinger Floor</td>
+      <td>Karle's Online Section (KF)<br>Last Names: A-L</td>
+      <td>141 Wohlers</td>
     </tr>
     <tr>
-      <td>Karle's Online Section (KF)<br>Last Names: Q-Z<br><br>Karle's In Person Section (L1)<br>Last Names: A-B</td>
-      <td>Foellinger Balcony</td>
+      <td>Karle's Online Section (KF)<br>Last Names: M-V</td>
+      <td>149 National Soybean Research Center</td>
     </tr>
     <tr>
-      <td>Karle's In Person Section (L1)<br>Last Names: C-G</td>
-      <td>100 MSEB</td>
+      <td>Karle's Online Section (KF)<br>Last Names: W-Z</td>
+      <td>180 Bevier</td>
     </tr>
     <tr>
-      <td>Karle's In Person Section (L1)<br>Last Names: H-Mc</td>
-      <td>314 Altgeld</td>
+      <td>Karle's In Person Section (L2)<br>Last Names: A-F</td>
+      <td>180 Bevier</td>
     </tr>
     <tr>
-      <td>Karle's In Person Section (L1)<br>Last Names: Me-R</td>
-      <td>114 David Kinley Hall</td>
+      <td>Karle's In Person Section (L2)<br>Last Names: G-O</td>
+      <td>66 Library</td>
     </tr>
     <tr>
-      <td>Karle's In Person Section (L1)<br>Last Names: S-Z</td>
-      <td>141 Wohler's</td>
+      <td>Karle's In Person Section (L2)<br>Last Names: P-Z</td>
+      <td>150 Animal Sciences</td>
     </tr>
     <tr>
-      <td>Albert's Online Section (ONL)<br>Last Names: A-G</td>
-      <td>180 Bevier Hall</td>
-    </tr>
-    <tr>
-      <td>Albert's Online Section (ONL)<br>Last Names: H-Z</td>
-      <td>2079 Natural History Building</td>
+      <td>Kelly's In Person Section (L1)<br>Last Names: A-Z</td>
+      <td>1404 Siebel Center</td>
     </tr>
   </table>
 
