--- a/_includes/exam_schedule.html
+++ b/_includes/exam_schedule.html
@@ -9,31 +9,31 @@
     </tr>
     <tr>
       <td>Karle's Online Section (KF)<br>Last Names: A-L</td>
-      <td>141 Wohlers</td>
+      <td><a href="http://ada.fs.illinois.edu/0159.html" target="_blank">141 Wohlers</a></td>
     </tr>
     <tr>
       <td>Karle's Online Section (KF)<br>Last Names: M-V</td>
-      <td>149 National Soybean Research Center</td>
+      <td><a href="http://ada.fs.illinois.edu/0124.html" target="_blank">149 National Soybean Research Center</a></td>
     </tr>
     <tr>
       <td>Karle's Online Section (KF)<br>Last Names: W-Z</td>
-      <td>180 Bevier</td>
+      <td><a href="http://ada.fs.illinois.edu/0158.html" target="_blank">180 Bevier</a></td>
     </tr>
     <tr>
       <td>Karle's In Person Section (L2)<br>Last Names: A-F</td>
-      <td>180 Bevier</td>
+      <td><a href="http://ada.fs.illinois.edu/0158.html" target="_blank">180 Bevier</a></td>
     </tr>
     <tr>
       <td>Karle's In Person Section (L2)<br>Last Names: G-O</td>
-      <td>66 Library</td>
+      <td><a href="http://ada.fs.illinois.edu/0041.html" target="_blank">66 Library</a></td>
     </tr>
     <tr>
       <td>Karle's In Person Section (L2)<br>Last Names: P-Z</td>
-      <td>150 Animal Sciences</td>
+      <td><a href="http://ada.fs.illinois.edu/0165.html" target="_blank">150 Animal Sciences</a></td>
     </tr>
     <tr>
       <td>Kelly's In Person Section (L1)<br>Last Names: A-Z</td>
-      <td>1404 Siebel Center</td>
+      <td><a href="http://ada.fs.illinois.edu/0563.html" target="_blank">1404 Siebel Center</a></td>
     </tr>
   </table>
 
