--- a/_includes/calendar.html
+++ b/_includes/calendar.html
@@ -117,7 +117,7 @@
   <td><p class="hw">HW Assignment 7 Due</p></td>
   <td><p class="prel">Chapter 8 Prelecture Due</p></td>
   <td><p class="hw">HW Assignment 8 Due</p></td>
-  <td><p class="prel">Chapter 9 Prelecture Due</p><p class="surv">Bonus Survey 3 Due</p></td>
+  <td><p class="prel">Chapter 9 Prelecture Due</p></td>
 </tr>
 </table>
 
@@ -146,7 +146,7 @@
   <td><p class="hw">HW Assignment 9 Due</p></td>
   <td><p class="prel">Chapter 11 Prelecture Due</p></td>
   <td><p class="hw">HW Assignment 10 Due</p></td>
-  <td><b><p class="conf">Exam 2 Conflict Sign-Up Due</p></b></td>
+  <td><b><p class="conf">Exam 2 Conflict Sign-Up Due</p></b><p class="surv">Bonus Survey 3 Due</p></td>
 </tr>
 <tr>
   <td style="line-height:1px;margin:0;"></td>
