--- a/_includes/final-schedule.html
+++ b/_includes/final-schedule.html
@@ -1,4 +1,4 @@
-<div class="table-responsive"> 
+<div class="table-responsive">
   <table class="table table-bordered">
   <tr>
     <th>Section</th>
@@ -10,19 +10,19 @@
     <td>L1 Kelly Findley's MWF In-Person Class</td>
     <td>Tuesday May 12th, 2020</td>
     <td>7-10pm</td>
-    <td>Location: TBA</td>
+    <td>101 Armory</td>
   </tr>
   <tr>
     <td>L2 Karle Flanagan's Tuesday/Thursday In-Person Class</td>
     <td>Friday May 8th</td>
     <td>7-10pm</td>
-    <td>Location: TBA</td>
+    <td>Foellinger Auditorium</td>
   </tr>
   <tr>
     <td>KF Karle Flanagan's Online class</td>
-    <td>Date: TBA</td>
-    <td>Time: TBA</td>
-    <td>Location: TBA</td>
+    <td>Monday May 11th, 2020</td>
+    <td>8-11am</td>
+    <td>Foellinger Auditorium</td>
   </tr>
   </table>
 </div>
