small tweak correction to final exam info

--- a/_includes/final-schedule.html
+++ b/_includes/final-schedule.html
@@ -14,7 +14,7 @@
   </tr>
   <tr>
     <td>L2 Karle Flanagan's Tuesday/Thursday In-Person Class</td>
-    <td>Friday May 8th</td>
+    <td>Friday May 8th, 2020</td>
     <td>7-10pm</td>
     <td>Foellinger Auditorium</td>
   </tr>
