exam 2 info update

--- a/_includes/exam_schedule.html
+++ b/_includes/exam_schedule.html
@@ -1,40 +1,36 @@
-
- 
-<div class="table-responsive"> 
+<div class="table-responsive">
   <table class="table table-bordered">
     <tr>
       <th>Section</th>
-      <th>Location</th> 
-     
+      <th>Location</th>
     </tr>
     <tr>
-      <td>Karle's Online Section (KF)<br>Last Names: A-L</td>
-      <td><a href="http://ada.fs.illinois.edu/0159.html" target="_blank">141 Wohlers</a></td>
+      <td>Karle's Online Section (KF)<br>Last Names: A-Kh</td>
+      <td>114 David Kinley Hall</td>
     </tr>
     <tr>
-      <td>Karle's Online Section (KF)<br>Last Names: M-V</td>
-      <td><a href="http://ada.fs.illinois.edu/0124.html" target="_blank">149 National Soybean Research Center</a></td>
+      <td>Karle's Online Section (KF)<br>Last Names: Ki-R<br></td>
+      <td>1404 Siebel Center</td>
     </tr>
     <tr>
-      <td>Karle's Online Section (KF)<br>Last Names: W-Z</td>
-      <td><a href="http://ada.fs.illinois.edu/0158.html" target="_blank">180 Bevier</a></td>
+      <td>Karle's Online Section (KF)<br>Last Names: S-Z<br><br>Karle's In Person Section (L2)<br>Last Names: A-B</td>
+      <td>150 Animal Science Lab</td>
     </tr>
     <tr>
-      <td>Karle's In Person Section (L2)<br>Last Names: A-F</td>
-      <td><a href="http://ada.fs.illinois.edu/0158.html" target="_blank">180 Bevier</a></td>
+      <td>Karle's In Person Section (L2)<br>Last Names: C-L</td>
+      <td>66 Main Library</td>
     </tr>
     <tr>
-      <td>Karle's In Person Section (L2)<br>Last Names: G-O</td>
-      <td><a href="http://ada.fs.illinois.edu/0041.html" target="_blank">66 Library</a></td>
+      <td>Karle's In Person Section (L2)<br>Last Names: M-Sc</td>
+      <td>1024 Chemistry Annex</td>
     </tr>
     <tr>
-      <td>Karle's In Person Section (L2)<br>Last Names: P-Z</td>
-      <td><a href="http://ada.fs.illinois.edu/0165.html" target="_blank">150 Animal Sciences</a></td>
+      <td>Karle's In Person Section (L2)<br>Last Names: Se - Z</td>
+      <td>1302 Everitt Laboratory</td>
     </tr>
     <tr>
       <td>Kelly's In Person Section (L1)<br>Last Names: A-Z</td>
-      <td><a href="http://ada.fs.illinois.edu/0563.html" target="_blank">1404 Siebel Center</a></td>
+      <td>141 Wohlers Hall</td>
     </tr>
   </table>
-
 </div>
