added map links for exam 2 locations

--- a/_includes/exam_schedule.html
+++ b/_includes/exam_schedule.html
@@ -6,31 +6,31 @@
     </tr>
     <tr>
       <td>Karle's Online Section (KF)<br>Last Names: A-Kh</td>
-      <td>114 David Kinley Hall</td>
+      <td><a href="http://ada.fs.illinois.edu/0054.html" target="_blank">114 David Kinley Hall</a></td>
     </tr>
     <tr>
       <td>Karle's Online Section (KF)<br>Last Names: Ki-R<br></td>
-      <td>1404 Siebel Center</td>
+      <td><a href="http://ada.fs.illinois.edu/0563Plan1.html" target="_blank">1404 Siebel Center</a></td>
     </tr>
     <tr>
       <td>Karle's Online Section (KF)<br>Last Names: S-Z<br><br>Karle's In Person Section (L2)<br>Last Names: A-B</td>
-      <td>150 Animal Science Lab</td>
+      <td><a href="http://ada.fs.illinois.edu/0165.html" target="_blank">150 Animal Science Lab</a></td>
     </tr>
     <tr>
       <td>Karle's In Person Section (L2)<br>Last Names: C-L</td>
-      <td>66 Main Library</td>
+      <td><a href="http://ada.fs.illinois.edu/0041.html" target="_blank">66 Main Library</a></td>
     </tr>
     <tr>
       <td>Karle's In Person Section (L2)<br>Last Names: M-Sc</td>
-      <td>1024 Chemistry Annex</td>
+      <td><a href="http://ada.fs.illinois.edu/0010.html" target="_blank">1024 Chemistry Annex</a></td>
     </tr>
     <tr>
       <td>Karle's In Person Section (L2)<br>Last Names: Se - Z</td>
-      <td>1302 Everitt Laboratory</td>
+      <td><a href="http://ada.fs.illinois.edu/0037.html" target="_blank">1302 Everitt Laboratory</a></td>
     </tr>
     <tr>
       <td>Kelly's In Person Section (L1)<br>Last Names: A-Z</td>
-      <td>141 Wohlers Hall</td>
+      <td><a href="http://ada.fs.illinois.edu/0159.html" target="_blank">141 Wohlers Hall</a></td>
     </tr>
   </table>
 </div>
