updated mobile css for covid19 page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -441,7 +441,7 @@ hr.socket {
   .syllabus {
     width: 100%;
   }
-  .syllabus.narrow, .calendar.narrow, .faqs.narrow, .exam-schedule.narrow, .practice-exams.narrow {
+  .syllabus.narrow, .calendar.narrow, .faqs.narrow, .exam-schedule.narrow, .practice-exams.narrow, .covid19.narrow {
     width: 100%;
     padding-top: 5px;
   }
@@ -456,7 +456,7 @@ hr.socket {
     padding-bottom: 1px;
     padding-top: 25px;
   }
-  .syllabus.narrow .card, .exam-schedule.narrow .card, .practice-exams.narrow .card, .faqs.narrow .card {
+  .syllabus.narrow .card, .exam-schedule.narrow .card, .practice-exams.narrow .card, .faqs.narrow .card, .covid19.narrow .card {
     padding: 0 30px;
     margin-bottom: -20px;
   }
