--- a/_includes/calendar.html
+++ b/_includes/calendar.html
@@ -223,7 +223,7 @@
   <td><p class="hw">HW Assignment 13 Due</p></td>
   <td><p class="prel">Chapter 15 Prelecture Due</p></td>
   <td><p class="hw">HW Assignment 14 Due</p></td>
-  <td><b><p class="conf">Exam 3 Conflict Sign-Up Due</p></b><p class="prel">Chapter 16 Prelecture Due</p><p class="surv">Bonus Survey 4 Due</p></td>
+  <td><p class="prel">Chapter 16 Prelecture Due</p><p class="surv">Bonus Survey 4 Due</p></td>
 </tr>
 <tr>
   <td style="line-height:1px;margin:0;"></td>
@@ -239,7 +239,7 @@
   <td><p class="hw">HW Assignment 15 Due</p></td>
   <td><p class="prel">Chapter 17 Prelecture Due</p></td>
   <td><p class="hw">HW Assignment 16 Due</p></td>
-  <td><p class="prel">Chapter 18 Prelecture Due</p></td>
+  <td><b><p class="conf">Exam 3 Conflict Sign-Up Due</p></b><p class="prel">Chapter 18 Prelecture Due</p></td>
 </tr>
 <tr>
   <td style="line-height:1px;margin:0;"></td>
