--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,6 +20,9 @@
         <a class="nav-link" href="{{ site.baseurl }}/index.html">Home</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="{{ site.baseurl }}/covid19.html">Covid-19</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="{{ site.baseurl }}/pages/staff.html">Staff</a>
       </li>
       <li class="nav-item">
