--- a/_includes/calendar.html
+++ b/_includes/calendar.html
@@ -239,7 +239,7 @@
   <td><p class="hw">HW Assignment 15 Due</p></td>
   <td><p class="prel">Chapter 17 Prelecture Due</p></td>
   <td><p class="hw">HW Assignment 16 Due</p></td>
-  <td><b><p class="conf">Exam 3 Conflict Sign-Up Due</p></b><p class="prel">Chapter 18 Prelecture Due</p></td>
+  <td><p class="prel">Chapter 18 Prelecture Due</p></td>
 </tr>
 <tr>
   <td style="line-height:1px;margin:0;"></td>
@@ -251,7 +251,7 @@
 </tr>
 <tr>
   <td><b>Week 13: Chapters 17-19</b>(Sampling & Inference)</td>
-  <td></td>
+  <td><b><p class="conf">Exam 3 Conflict Sign-Up Due</p></b></td>
   <td><p class="hw">HW Assignment 17 Due</p></td>
   <td><b><p class="exam">Exam 3 at 7pm</p></b></td>
   <td><p>No Class &#128522;</p></td>
