additional updates to exam time/location info

--- a/_includes/calendar.html
+++ b/_includes/calendar.html
@@ -253,7 +253,7 @@
   <td><b>Week 13: Chapters 17-19</b>(Sampling & Inference)</td>
   <td><b><p class="conf">Exam 3 Conflict Sign-Up Due</p></b></td>
   <td><p class="hw">HW Assignment 17 Due</p></td>
-  <td><b><p class="exam">Exam 3 at 7pm</p></b></td>
+  <td><b><p class="exam">Exam 3 at 12:00am-9:00pm</p></b></td>
   <td><p>No Class &#128522;</p></td>
   <td></td>
 </tr>
