--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,6 +23,9 @@
         <a class="nav-link" href="{{ site.baseurl }}/pages/covid19.html">Covid-19</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="{{ site.baseurl }}/pages/grade_calc.html">Grade Calculator</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="{{ site.baseurl }}/pages/staff.html">Staff</a>
       </li>
       <li class="nav-item">
