updated announcements, released practice final exams, and updated final exam dates and times

--- a/_includes/final-schedule.html
+++ b/_includes/final-schedule.html
@@ -2,26 +2,22 @@
   <table class="table table-bordered">
   <tr>
     <th>Section</th>
-    <th>Date</th>
-    <th>Time</th>
+    <th>Date & Time</th>
     <th>Location</th>
   </tr>
   <tr>
     <td>L1 Kelly Findley's MWF In-Person Class</td>
-    <td>Tuesday May 12th, 2020</td>
-    <td>12:00am-9:00pm</td>
+    <td>Friday May 8th at 12:00am to Wednesday May 13th at 9pm</td>
     <td>N/A</td>
   </tr>
   <tr>
     <td>L2 Karle Flanagan's Tuesday/Thursday In-Person Class</td>
-    <td>Friday May 8th, 2020</td>
-    <td>12:00am-9:00pm</td>
+    <td>Friday May 8th at 12:00am to Wednesday May 13th at 9pm</td>
     <td>N/A</td>
   </tr>
   <tr>
     <td>KF Karle Flanagan's Online class</td>
-    <td>Monday May 11th, 2020</td>
-    <td>12:00am-9:00pm</td>
+    <td>Friday May 8th at 12:00am to Wednesday May 13th at 9pm</td>
     <td>N/A</td>
   </tr>
   </table>
