Made due date changes for HW 21, 22, and Bonus survey 5

--- a/_includes/calendar.html
+++ b/_includes/calendar.html
@@ -313,9 +313,9 @@
 <tr>
   <td><b>Week 16: Last Week of Class</b>(Final Exam Review)</td>
   <td></td>
-  <td><p class="prel">Chapter 23 Part 2 Prelecture Due</p></td>
-  <td><p class="hw">HW Assignment 21 Due</p><p class="surv">Bonus Survey 5 Due</p></td>
-  <td><p><b>Reading Day</b><br>No Class &#128522;</p></td>
+  <td><p class="hw">HW Assignment 21 Due</p><p class="prel">Chapter 23 Part 2 Prelecture Due</p></td>
+  <td></td>
+  <td><p class="hw">HW Assignment 22 Due</p><p class="surv">Bonus Survey 5 Due (11:59pm)</p><p><b>Reading Day</b><br>No Class &#128522;</p></td>
   <td><p>No Class &#128522;</p></td>
 </tr>
 <tr>
