--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -10,12 +10,12 @@
 <div class="caption text-center">
   <h1>{{ site.title }}</h1>
   <div class="landing-heading-underline"></div>
-  <h3>{{ site.semester }}</h3>
-  <a class="btn btn-outline-light btn-lg" href="#sections">Get Started</a>
-  <div class="announcements narrow">
+  <h3>Go to our new Fall 2020 site!</h3>
+  <a class="btn btn-outline-light btn-lg" href="https://karleflanagan.github.io/stat100F20/index.html">Go to Fall 2020</a>
+  <!-- <div class="announcements narrow">
     <div class="card bg-white rounded shadow-sm py-3">
       {{ site.data.info.announcements }}
     </div>
-  </div>
+  </div> -->
 </div>
 <!-- End of Landing Page -->
